feat(concepts): add some info around Boards

--- a/openapi/organisations-api-v1.yaml
+++ b/openapi/organisations-api-v1.yaml
@@ -615,6 +615,7 @@ paths:
       parameters:
         - name: slug
           in: path
+          required: true
           schema:
             type: string
       responses:
